# research-bot

./: .gitignore  Cargo.toml  README.md
.github/: README.md
.github/workflows/: README.md  daily.yml  rag_artifacts.yml
data/: README.md  discovery.yml  sources.yml  visited.jsonl
papers/: README.md
rag/: README.md
reports/: 2025-12-22.md  2025-12-24.md  2025-12-25.md  2025-12-26.md  2025-12-27.md  2025-12-28.md  2025-12-29.md  2025-12-30.md  2025-12-31.md  2026-01-01.md  2026-01-02.md  2026-01-03.md  2026-01-04.md  2026-01-05.md  2026-01-06.md  2026-01-07.md  2026-01-08.md  2026-01-09.md  2026-01-10.md  2026-01-11.md  2026-01-12.md  2026-01-13.md  2026-01-15.md  2026-01-16.md  2026-01-17.md  2026-01-19.md  2026-01-20.md  2026-01-21.md  2026-01-22.md  2026-01-23.md  2026-01-24.md  2026-01-25.md  2026-01-26.md  2026-01-27.md  2026-01-28.md  2026-01-29.md  2026-01-30.md  2026-01-31.md  2026-02-01.md  2026-02-02.md  (+77 more)
scripts/: README.md  download_papers.py  rag_ingest.py  sync_rag_artifacts.sh
scripts/systemd/: README.md  research-bot-rag-sync.service  research-bot-rag-sync.timer  research-bot-slack.service
src/: README.md  main.rs
